[package]
name = "kvs"
version = "0.1.0"
authors = ["Chunfung <i@jacob953.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
